# rustdesk-monitoring-mvp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Funcionalidades propuestas para RustDesk.md  README.md  entrypoint-monitoring.sh  render.yaml  server-config.example.toml  server-config.railway.toml
docs/: helpdesk-addendum-three-actor-flow-2026-03-31.md  helpdesk-assumptions-and-decisions.md  helpdesk-execution-backlog.md  helpdesk-implementation-plan.md  helpdesk-installer-validation.md  helpdesk-original-requirements.md  helpdesk-state-model.md  issues-ya-cubiertos-o-parcialmente-cubiertos-2026-03-27.md  mapa-prioridades-reales-2026-03-27.md  operations.md  post-demo-prioridades-reales-2026-03-27.md  professional-report-2026-03-04.txt  project-gap-analysis-2026-03-17.md  project-status-report-2026-03-17.md  project-status-report-2026-04-01.md  railway-deploy.md  render-free-deploy.md  render-postgres-spike-2026-04-07.md  run-binaries.md  rustdesk-fork-setup-ubuntu.md  technical-spec.md  turso-migration-checklist-2026-04-01.md  turso-spike-status-2026-04-01.md  windows-build-strategy.md  windows-exe-playbook.md  windows-installer.md  windows-new-machine-setup.md
scripts/: apply-rustdesk-fork-patches.ps1  bootstrap-windows-dev-machine.ps1  build-rustdesk-windows-installer.ps1  build-rustdesk-windows-test-installer.ps1  check-rustdesk-fork.sh  check-rustdesk-windows-build-env.ps1  install-rustdesk-flutter-sdk.ps1  install-rustdesk-ubuntu-deps.sh  install-rustdesk-windows-build-deps.ps1  run-dashboard-dev.ps1  run-dashboard-dev.sh  run-monitoring-server.ps1  (+5 more)
(+46 files in other folders)
