[package]
name = "rustdesk_monitoring_mvp"
version = "0.1.0"
edition = "2021"
description = "MVP de monitoreo y auditoria estilo RustDesk con CLI, eventos y webhook robusto"
license = "MIT"

[lib]
name = "rustdesk_monitoring_mvp"
path = "src/lib.rs"

[[bin]]
name = "monitoring-server"
path = "src/bin/monitoring-server.rs"

[[bin]]
name = "rustdesk-cli"
path = "src/bin/rustdesk-cli.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
